--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ h1 		{ background-color: #000000; color: #ffffff; margin: 0; }
 h2		{ font-size: 28; margin: 3px; padding: 2px; }
 h3		{ font-size: 18; margin: 3px; padding: 2px; }
 canvas 	{ width: 100%; height: 100%; }
+td 		{ width: 65%; }
+#dragSongBox:hover{	background-color: #cccccc; }
 
 #container {
     position: absolute;
@@ -22,16 +24,54 @@ canvas 	{ width: 100%; height: 100%; }
  height: 100px;
 }
 
-#dragSongBox:hover{
-	background-color: #cccccc;
+#bandDetails {
+	opacity: 0.8;
+	text-align: right;
+	position: absolute;
+	width: 12%;
+	top: 10%;
+	left: 26%;
+	margin-left: -25%;
+	border: 4px solid white;
+	background-color: #aaaaaa;
+}
+
+.beatBox {
+	background-color: #bb3333;
+	border: 2px solid white;	
+	width: 75px;
+	height: 25px;
+}
+
+#loadBar {
+	position: absolute;
+	height: 2%;
+	width: 50%;
+	left: 25%;
+	bottom: -10%;
+	background-color: #33bb33;
+	border: 4px solid white;	
+}
+
+#analysingDisplay {
+	text-align: center;
+	border: 4px solid white;
+	background-color: #aaaaaa;
+	position: absolute;
+	top: -30%;
+	min-width: 250px;
+	left: 40%;
+	height: 10%;
+	width: 20%;
 }
 
 #mainDiv {
+	opacity: 0.8;
     position: absolute;
     width: 50%;
 	min-width: 550px;
     height: 400px;
-    border: 2px solid white;
+    border: 4px solid white;
     left: 50%;
     top: 10%;
     margin-left: -25%;
