--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1 		{ background-color: #000000; color: #ffffff; margin: 0; }
 h2		{ font-size: 28; margin: 3px; padding: 2px; }
 h3		{ font-size: 18; margin: 3px; padding: 2px; }
 canvas 	{ width: 100%; height: 100%; }
-td 		{ width: 65%; }
+
 #dragSongBox:hover{	background-color: #cccccc; }
 
 #container {
@@ -26,9 +26,9 @@ td 		{ width: 65%; }
 
 #bandDetails {
 	opacity: 0.8;
-	text-align: right;
+	text-align: center;
 	position: absolute;
-	width: 12%;
+	width: 15%;
 	top: 10%;
 	left: 26%;
 	margin-left: -25%;
@@ -39,7 +39,7 @@ td 		{ width: 65%; }
 .beatBox {
 	background-color: #bb3333;
 	border: 2px solid white;	
-	width: 75px;
+	width: 80px;
 	height: 25px;
 }
 
