--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
 body 	{ background-color: #000000; margin: 0; padding: 0; font-family: verdana; }
-h1 		{ background-color: #000000; color: #ffffff; margin: 0; }
 h2		{ font-size: 28; margin: 3px; padding: 2px; }
 h3		{ font-size: 18; margin: 3px; padding: 2px; }
 canvas 	{ width: 100%; height: 100%; }
+html 	{ overflow: hidden; }
 
-#dragSongBox:hover{	background-color: #cccccc; }
+.btn:hover {  background: #5c6469; }
+
+.btn {
+  font-family: verdana;
+  color: #ffffff;
+  background: #000000;
+  min-width:230px;
+  padding: 5px 10px 5px 10px;
+  border: solid #ffffff 2px;
+  margin-top: 2px;
+}
+
+.beatBox {
+	background-color: #bb3333;
+	border: 2px solid white;	
+	width: 80px;
+	height: 25px;
+}
+
+#songList { list-style-type: none; }
+
+#dragSongBox:hover{	background-color: #5c6469; }
 
 #container {
     position: absolute;
@@ -17,11 +38,12 @@ canvas 	{ width: 100%; height: 100%; }
 
 #dragSongBox {
  text-align: center;
- position: absolute;
- border: 2px dotted white;
- width: 50%;
- margin-left: 25%;
- height: 100px;
+ background: #000000;
+ color: #ffffff;
+ border: solid #ffffff 2px;
+ width: 40%;
+ margin-left: 30%;
+ height: 80px;
 }
 
 #bandDetails {
@@ -33,14 +55,8 @@ canvas 	{ width: 100%; height: 100%; }
 	left: 26%;
 	margin-left: -25%;
 	border: 4px solid white;
-	background-color: #aaaaaa;
-}
-
-.beatBox {
-	background-color: #bb3333;
-	border: 2px solid white;	
-	width: 80px;
-	height: 25px;
+	color: #ffffff;
+	background-color: #222222;
 }
 
 #loadBar {
@@ -56,7 +72,8 @@ canvas 	{ width: 100%; height: 100%; }
 #analysingDisplay {
 	text-align: center;
 	border: 4px solid white;
-	background-color: #aaaaaa;
+	background-color: #222222;
+	color: #ffffff;
 	position: absolute;
 	top: -30%;
 	min-width: 250px;
@@ -66,14 +83,17 @@ canvas 	{ width: 100%; height: 100%; }
 }
 
 #mainDiv {
+	text-align: center;
 	opacity: 0.8;
     position: absolute;
     width: 50%;
 	min-width: 550px;
-    height: 400px;
+    padding: 10px;
     border: 4px solid white;
     left: 50%;
     top: 10%;
     margin-left: -25%;
-    background-color: #aaaaaa;
+	color: #ffffff;
+    background-color: #222222;
+	float: center;
 }
