--- a/style.css
+++ b/style.css
@@ -97,3 +97,15 @@ html 	{ overflow: hidden; }
     background-color: #222222;
 	float: center;
 }
+
+#credits {
+	border: 4px solid white;
+	background-color: #222222;
+	color: #ffffff;
+	opacity: 0.5;
+	position: absolute;
+	bottom: -120px;
+	width: 275px;
+	right: -40px;
+	height: 175px;
+}
